--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
                 <h3 class="text-3xl font-bold mb-8 text-yellow-400" >Why Choose Us?</h3>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="p-6 bg-gray-700 rounded-lg">
-                        <h4 class="text-2xl font-semibold mb-4 text-violet-400">Rick and Morty Universe</h4>
-                        <p class="text-zinc-400">Play games inspired by your favorite multiverse adventurers.</p>
+                        <h4 class="text-2xl font-semibold mb-4 text-violet-400">Retro</h4>
+                        <p class="text-zinc-400">Play games inspired by your favorite retro games.</p>
                     </div>
                     <div class="p-6 bg-gray-700 rounded-lg">
                         <h4 class="text-2xl font-semibold mb-4 text-violet-400">Arcade Classics</h4>
@@ -54,22 +54,22 @@
         <!-- Games Section -->
         <section id="games" class="py-16">
             <div class="container mx-auto text-center">
-                <h3 class="text-3xl font-bold mb-8 text-zinc-950">Featured Games</h3>
+                <h3 class="text-3xl font-bold mb-8 text-violet-400">Featured Games</h3>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="bg-gray-700 p-4 rounded-lg">
                         <img src="https://i.imgur.com/qXmIehc.jpeg" alt="Game 1" class="w-full mb-4 rounded">
-                        <h4 class="text-xl font-semibold mb-2 text-zinc-400">Rick's Intergalactic Adventure</h4>
-                        <p class="text-violet-300">Join Rick in a quest through dimensions.</p>
+                        <h4 class="text-xl font-semibold mb-2 text-zinc-300">Snake</h4>
+                        <p class="text-violet-300">Snake is a genre of action video games where the player maneuvers the end of a growing line, often themed as a snake.</p>
                     </div>
                     <div class="bg-gray-700 p-4 rounded-lg">
                         <img src="https://i.imgur.com/XuQp2hS.png" alt="Game 2" class="w-full mb-4 rounded">
-                        <h4 class="text-xl font-semibold mb-2 text-zinc-400">Anime Battle Royale</h4>
-                        <p class="text-violet-300">Fight alongside iconic anime characters.</p>
+                        <h4 class="text-xl font-semibold mb-2 text-zinc-300">Sudo</h4>
+                        <p class="text-violet-300">Sudoku is a logic-based, combinatorial number-placement puzzle. The goal is to fill in the grid with numbers from 1 to 9, without repeats, in a 3x3 box.</p>
                     </div>
                     <div class="bg-gray-700 p-4 rounded-lg">
                         <img src="https://i.imgur.com/sgsZctU.jpeg" alt="Game 3" class="w-full mb-4 rounded">
-                        <h4 class="text-xl font-semibold mb-2 text-zinc-400">Pop Culture Trivia</h4>
-                        <p class="text-violet-300">Test your knowledge of movies, shows, and more.</p>
+                        <h4 class="text-xl font-semibold mb-2 text-zinc-300">Chess</h4>
+                        <p class="text-violet-300">The recorded history of chess goes back at least to the emergence of a similar game, in seventh-century India. After its introduction in Persia, it spread to the Arab world and then to Europe.</p>
                     </div>
                 </div>
             </div>
@@ -79,22 +79,22 @@
         <section id="about" class="py-16 bg-gray-800">
             <div class="container mx-auto text-center">
                 <h3 class="text-3xl font-bold mb-8 text-yellow-400">About Us</h3>
-                <p class="text-zinc-400">We are passionate gamers and pop culture enthusiasts dedicated to bringing you the best themed games inspired by your favorite shows, movies, and anime.</p>
+                <p class="text-zinc-400">We are passionate gamers and enthusiasts dedicated to bringing you the best themed games.</p>
             </div>
         </section>
 
         <!-- Contact Section -->
         <section id="contact" class="py-16">
             <div class="container mx-auto text-center">
-                <h3 class="text-3xl font-bold mb-8 text-violet-400">Follow Us</h3>
+                <h3 class="text-3xl font-bold mb-8 text-yellow-400">Follow Us</h3>
                 <div class="flex justify-evenly space-x-8">
-                    <a href="https://github.com" target="_blank" class="text-zinc-950 hover:text-yellow-400">
+                    <a href="https://github.com/blueowl2794" target="_blank" class="text-zinc-800 hover:text-violet-400">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-12 h-12">
                             <path d="M12 .5C5.648.5.5 5.626.5 12.035c0 5.125 3.343 9.468 7.97 10.996.583.108.797-.25.797-.558 0-.276-.01-1.01-.015-1.985-3.233.705-3.915-1.554-3.915-1.554-.53-1.344-1.293-1.702-1.293-1.702-1.057-.719.08-.704.08-.704 1.168.081 1.783 1.209 1.783 1.209 1.038 1.77 2.727 1.259 3.396.963.105-.754.406-1.26.739-1.55-2.581-.29-5.289-1.275-5.289-5.674 0-1.253.457-2.277 1.21-3.078-.12-.292-.525-1.462.115-3.048 0 0 .986-.316 3.23 1.204a11.153 11.153 0 0 1 2.943-.4c1 .005 2.006.136 2.942.4 2.245-1.52 3.229-1.204 3.229-1.204.642 1.586.237 2.756.117 3.048.756.801 1.21 1.825 1.21 3.078 0 4.412-2.712 5.379-5.3 5.663.418.36.788 1.068.788 2.15 0 1.55-.015 2.801-.015 3.18 0 .311.212.673.801.557 4.623-1.533 7.965-5.872 7.965-10.993C23.5 5.626 18.352.5 12 .5z" />
                         </svg>
                     </a>
-                    <a href="https://linkedin.com" target="_blank" class="text-zinc-950 hover:text-yellow-400">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-12 h-12">
+                    <a href="https://linkedin.com" target="_blank" class="text-zinc-800 hover:text-violet-400">
+                        <svg xmlns="https://www.linkedin.com/in/erik-santiago-olarte-molina-b3b5a2224/" fill="currentColor" viewBox="0 0 24 24" class="w-12 h-12">
                             <path d="M20.452 20.452H16.86v-5.569c0-1.327-.025-3.038-1.849-3.038-1.853 0-2.136 1.447-2.136 2.942v5.665H9.283V9h3.437v1.561h.048c.479-.907 1.645-1.857 3.39-1.857 3.625 0 4.292 2.385 4.292 5.486v6.262zM5.337 7.433a2.003 2.003 0 1 1 0-4.006 2.003 2.003 0 0 1 0 4.006zM7.119 20.452H3.554V9h3.565v11.452zM22.225 0H1.771C.791 0 0 .771 0 1.75v20.495C0 23.229.791 24 1.771 24h20.454c.98 0 1.771-.771 1.771-1.75V1.75C23.996.771 23.205 0 22.225 0z" />
                         </svg>
                     </a>
