change_contact_bottom

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
             <div class="container mx-auto text-center">
                 <h3 class="text-3xl font-bold mb-8 text-yellow-400">Follow Us</h3>
                 <div class="flex justify-evenly space-x-8 " >
-                    <a href="https://github.com/blueowl2794" target="_blank" class="p-0 hover:rounded-full text-zinc-800 hover:text-zinc-100/30  hover:bg-gradient-to-r hover:from-violet-300  hover:to-blue-500">
+                    <a href="https://github.com/blueowl2794" target="_blank" class=" w-auto content-center hover:rounded-full text-zinc-800 hover:text-zinc-100/35  hover:bg-gradient-to-r hover:from-blue-300  hover:to-red-300">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-12 h-12">
                             <path d="M12 .5C5.648.5.5 5.626.5 12.035c0 5.125 3.343 9.468 7.97 10.996.583.108.797-.25.797-.558 0-.276-.01-1.01-.015-1.985-3.233.705-3.915-1.554-3.915-1.554-.53-1.344-1.293-1.702-1.293-1.702-1.057-.719.08-.704.08-.704 1.168.081 1.783 1.209 1.783 1.209 1.038 1.77 2.727 1.259 3.396.963.105-.754.406-1.26.739-1.55-2.581-.29-5.289-1.275-5.289-5.674 0-1.253.457-2.277 1.21-3.078-.12-.292-.525-1.462.115-3.048 0 0 .986-.316 3.23 1.204a11.153 11.153 0 0 1 2.943-.4c1 .005 2.006.136 2.942.4 2.245-1.52 3.229-1.204 3.229-1.204.642 1.586.237 2.756.117 3.048.756.801 1.21 1.825 1.21 3.078 0 4.412-2.712 5.379-5.3 5.663.418.36.788 1.068.788 2.15 0 1.55-.015 2.801-.015 3.18 0 .311.212.673.801.557 4.623-1.533 7.965-5.872 7.965-10.993C23.5 5.626 18.352.5 12 .5z" />
                         </svg>
