--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="bg-gray-700 p-4 rounded-lg">
                         <img src="https://i.imgur.com/qXmIehc.jpeg" alt="Game 1" class="w-full mb-4 rounded">
-                        <h4 class="text-xl font-semibold mb-2 text-zinc-300">Snake</h4>
+                        <h4 class="text-xl font-semibold mb-2 text-zinc-300"> <a href="pages/index.html" target="_blank" rel="noopener noreferrer">Snake</a></h4>
                         <p class="bg-clip-text text-transparent bg-gradient-to-r from-violet-400  to-yellow-200">Snake is a genre of action video games where the player maneuvers the end of a growing line, often themed as a snake.</p>
                     </div>
                     <div class="bg-gray-700 p-4 rounded-lg">
